--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,20 +10,21 @@
 <body>
 <div class="container">
     <h1>CRM System</h1>
+    <h2></h2>
     <hr>
     <h2>New order</h2>
 
-    <form action="#" th:action="@{/add}" th:object="${person}" method="GET">
+<!--    <form action="#" th:action="@{/add}" th:object="${person}" method="GET">-->
 <!--        <input type="hidden" th:field="*{id}"/>-->
-        <label>
-            <input type="text" th:field="*{firstname}" class="form-control mb-4 col-4">
-        </label>
-        <label>
-            <input type="text" th:field="*{surname}" class="form-control mb-4 col-4">
-        </label>
-        <button type="submit" class="btn btn-info col-2">Exit</button>
-        <button type="submit" class="btn btn-info col-2">Create new order</button>
-    </form>
+<!--        <label>-->
+<!--            <input type="text" th:field="*{firstname}" class="form-control mb-4 col-4">-->
+<!--        </label>-->
+<!--        <label>-->
+<!--            <input type="text" th:field="*{surname}" class="form-control mb-4 col-4">-->
+<!--        </label>-->
+<!--        <button type="submit" class="btn btn-info col-2">Exit</button>-->
+<!--        <button type="submit" class="btn btn-info col-2">Create new order</button>-->
+<!--    </form>-->
 
 
 <!--    <form action="#" th:action="@{}" th:object="${order}" method="GET">-->
