--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+    <meta charset="UTF-8">
     <title>System</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Management System</h1>
     <hr>
-    <h2>Save person</h2>
+    <h2>Add new person</h2>
     <form action="#" th:action="@{/home/add}" th:object="${person}" method="POST">
         <label>
             <input type="text" th:field="*{firstname}" placeholder="Firstname" class="form-control mb-4 col-4">
@@ -25,6 +25,16 @@
         <label>
             <input type="text" th:field="*{password}" placeholder="Password" class="form-control mb-4 col-4">
         </label>
+        <label for="role">Role: </label>
+        <select class="form-control" id="role" name="role">
+            <option th:each="role : ${roleoptions}" th:text="${role}" th:value="${role}">
+            </option>
+        </select>
+        <label for="status">Status: </label>
+        <select class="form-control" id="status" name="status">
+            <option th:each="status : ${statusoptions}" th:text="${status}" th:value="${status}">
+            </option>
+        </select>
         <button type="submit" class="btn btn-info col-2">Save person</button>
     </form>
 </div>
