--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+    <meta charset="UTF-8">
     <title>Update</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -13,7 +13,7 @@
     <hr>
     <!--    <p th:text="${person.getFirstname()}">VALUE</p>-->
     <a th:href="@{/home/createmessageform}" class="btn btn-primary">New message</a>
-    <a th:href="@{/home/createpersonform}" class="btn btn-primary">Add person</a>
+    <a th:href="@{/home/showlist}" class="btn btn-primary">Users</a>
     <a th:href="@{/auth/login}" class="btn btn-primary">Exit</a>
     <hr>
     <table class="table table-striped table-responsive-md">
