--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/html"
+    <meta charset="UTF-8"
           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://thymeleaf.org ">
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
         <h2 class="form-signin-heading">Login</h2>
         <p>
             <label for="username">Login</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" style="width: 25%;" required>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Login" style="width: 25%;" required>
         </p>
         <p>
             <label for="password">Password</label>
