--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+    <meta charset="UTF-8">
     <title>Update</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -11,23 +11,45 @@
 <div class="container">
     <h1>Management System</h1>
     <hr>
-    <h2>Update person</h2>
-    <form action="#" th:action="@{/add}" th:object="${person}" method="POST">
+    <h2>Update personal data</h2>
+    <form id="update" action="#" th:action="@{/home/add}" th:object="${person}" method="POST">
         <input type="hidden" th:field="*{id}"/>
-        <label>
-            <input type="text" th:field="*{firstname}" class="form-control mb-4 col-4">
-        </label>
-        <label>
-            <input type="text" th:field="*{surname}" class="form-control mb-4 col-4">
-        </label>
-        <label>
-            <input type="text" th:field="*{login}" class="form-control mb-4 col-4">
-        </label>
-        <label>
-            <input type="text" th:field="*{password}" class="form-control mb-4 col-4">
-        </label>
-        <button type="submit" class="btn btn-info col-2">Update</button>
+        <label for="firstname">Firstname: </label>
+        <input id="firstname" type="text" th:field="*{firstname}" class="form-control mb-4 col-4">
+        <label for="surname">Surname: </label>
+        <input id="surname" type="text" th:field="*{surname}" class="form-control mb-4 col-4">
+        <label for="login">Login: </label>
+        <input id="login" type="text" th:field="*{login}" class="form-control mb-4 col-4">
+        <label for="password">Password: </label>
+        <input id="password" type="text" th:field="*{password}" class="form-control mb-4 col-4">
+        <label for="role">Role: </label>
+        <select class="form-control" id="role" name="role">
+            <option th:each="role : ${roleoptions}" th:text="${role}" th:value="${role}"
+                    th:selected="(${role == person.getRole()})">
+            </option>
+        </select>
+        <label for="status">Status: </label>
+        <select class="form-control" id="status" name="status">
+            <option th:each="status : ${statusoptions}" th:text="${status}" th:value="${status}"
+                    th:selected="(${status == person.status.name()})">
+            </option>
+        </select>
     </form>
+    <form id="back" action="#" th:action="@{/home/showlist}" method="GET"></form>
+    <table style="width:100%;">
+        <tr>
+            <td style="text-align: left;">
+                <button id="update_button" type="submit" class="btn btn-info col-2">Update</button>
+            </td>
+            <td style="text-align: right;">
+                <button id="back_button" type="submit" class="btn btn-info col-2" data-icon="back">Back</button>
+            </td>
+        </tr>
+    </table>
 </div>
+<script>
+    document.getElementById('update_button').addEventListener('click', () => document.getElementById('update').submit());
+    document.getElementById('back_button').addEventListener('click', () => document.getElementById('back').submit());
+</script>
 </body>
 </html>
