--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,10 +11,9 @@
 <div class="container">
     <h1>CRM System</h1>
     <hr>
-    <!--    <p th:text="${person.getFirstname()}">VALUE</p>-->
     <a th:href="@{/home/createmessageform}" class="btn btn-primary">New message</a>
     <a th:href="@{/home/showlist}" class="btn btn-primary">Users</a>
-    <a th:href="@{/auth/login}" class="btn btn-primary">Exit</a>
+    <a th:href="@{/logout}" class="btn btn-primary">Exit</a>
     <hr>
     <table class="table table-striped table-responsive-md">
         <thead>
