--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -3,7 +3,8 @@
 <head>
     <title>Add Person</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/yeti/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootlint@1.1.0/dist/browser/bootlint.min.js"></script>
@@ -15,7 +16,8 @@
     <h1>Management System</h1>
     <hr>
     <h2>Add new person</h2>
-    <form action="#" th:action="@{/home/add}" th:object="${person}" method="POST">
+    <form action="#" th:action="@{/home/{login}/add/(login=${#request.remoteUser})}" th:object="${person}"
+          method="POST">
         <label>
             <input type="text" th:field="*{firstname}" placeholder="Firstname" class="form-control mb-4 col-4">
         </label>
