--- a/src/main/resources/templates/listpeople.html
+++ b/src/main/resources/templates/listpeople.html
@@ -3,7 +3,8 @@
 <head>
     <title>People</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/yeti/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootlint@1.1.0/dist/browser/bootlint.min.js"></script>
@@ -37,8 +38,10 @@
             <td th:text="${person.role}"></td>
             <td th:text="${person.status}"></td>
             <td>
-                <a th:href="@{/home/update/{id}(id=${person.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/home/delete/{id}(id=${person.id})}" style="background-color: indianred" class="btn btn-primary">Delete</a>
+                <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/home/update/{id}(id=${person.id})}"
+                   class="btn btn-primary">Update</a>
+                <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/home/delete/{id}(id=${person.id})}"
+                   style="background-color: indianred" class="btn btn-primary">Delete</a>
             </td>
         </tr>
         </tbody>
