fix: fixed back and delete buttons

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -44,6 +44,7 @@
         <p></p>
         <button type="submit" class="btn btn-info col-2">Save person</button>
     </form>
+    <a th:href="@{/home}" class="btn btn-primary">Back</a>
 </div>
 </body>
 </html>
