--- a/src/main/resources/templates/listpeople.html
+++ b/src/main/resources/templates/listpeople.html
@@ -40,7 +40,8 @@
             <td>
                 <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/home/update/{id}(id=${person.id})}"
                    class="btn btn-primary">Update</a>
-                <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/home/delete/{id}(id=${person.id})}"
+                <a th:if="${curperson.role.name()}=='ADMIN'"
+                   th:href="@{/home/{login}/delete/{id}(id=${person.id}, login=${#request.remoteUser})}"
                    style="background-color: indianred" class="btn btn-primary">Delete</a>
             </td>
         </tr>
