feature: added task functionality

--- a/src/main/resources/templates/readt.html
+++ b/src/main/resources/templates/readt.html
@@ -15,8 +15,8 @@
 <div class="container">
     <h1>CRM System</h1>
     <hr>
-    <h2>Message content</h2>
-    <p th:text="${message.getContent()}">VALUE</p>
+    <h2>Task content</h2>
+    <p th:text="${task.getContent()}">VALUE</p>
     <a th:href="@{/home}" class="btn btn-primary">Back</a>
 </div>
 </body>
