--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,67 +15,133 @@
 <div class="container">
     <h1>Welcome to CRM System, [[${#request.remoteUser}]]</h1>
     <hr>
-    <a th:href="@{/home/{login}/createmessageform/(login=${#request.remoteUser})}" class="btn btn-primary">New
+    <a th:href="@{/home/{login}/create/message/(login=${#request.remoteUser})}" class="btn btn-primary">New
         message</a>
+    <a th:href="@{/home/{login}/createtaskform/(login=${#request.remoteUser})}" class="btn btn-primary">New
+        task</a>
     <a th:href="@{/home/showlist/{login}(login=${#request.remoteUser})}" class="btn btn-primary">Users</a>
     <a th:href="@{/logout}" style="background-color: indianred" class="btn btn-primary">Exit</a>
     <hr>
 
     <div class="tab">
-        <a id="inc_messages" class="btn btn-primary tablinks" onclick="openEnvelope(event, 'Incoming messages')">Incoming
-            messages</a>
-        <a id="sent_messages" class="btn btn-primary tablinks" onclick="openEnvelope(event, 'Sent messages')">Sent
-            messages</a>
+        <a id="received" class="btn btn-primary tablinks" onclick="openEnvelope(event, 'received_messages_tasks')">Received
+            messages and tasks</a>
+        <a id="sent" class="btn btn-primary tablinks" onclick="openEnvelope(event, 'sent_messages_tasks')">Sent
+            messages and tasks</a>
     </div>
-    <div id="Incoming messages" class="tabcontent">
-        <h3>Incoming messages</h3>
-        <table class="table table-striped table-responsive-md">
-            <thead>
-            <tr>
-                <th>Sender</th>
-                <th>Topic</th>
-                <th>Date</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="message : ${listMessages}" th:if="${message.receiver} == ${#request.remoteUser}">
-                <td th:text="${message.getPersonAuthor().firstname} + ' ' + ${message.getPersonAuthor().surname}"></td>
-                <td th:text="${message.topic}"></td>
-                <td th:text="${message.date}"></td>
-                <td>
-                    <a th:href="@{/home/showmessage/{id}(id=${message.id})}" class="btn btn-primary">Read</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <p>
+    <div id="received_messages_tasks" class="tabcontent">
+        <h3>Received</h3>
+        <hr>
+        <div style="float:left;">
+            <h4>Messages</h4>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                <tr>
+                    <th>Sender</th>
+                    <th>Topic</th>
+                    <th>Date</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="message : ${listMessages}" th:if="${message.receiver} == ${#request.remoteUser}">
+                    <td th:text="${message.getPersonAuthor().firstname} + ' ' + ${message.getPersonAuthor().surname}"></td>
+                    <td th:text="${message.topic}"></td>
+                    <td th:text="${message.date}"></td>
+                    <td>
+                        <a th:href="@{/home/showmessage/{id}(id=${message.id})}" class="btn btn-primary">Read</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div style="float:right;">
+            <h4>Tasks</h4>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                <tr>
+                    <th>Sender</th>
+                    <th>Topic</th>
+                    <th>Date</th>
+                    <th>Due date</th>
+                    <th>Urgency</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="task : ${listTasks}" th:if="${task.receiver} == ${#request.remoteUser}">
+                    <td th:text="${task.getPersonAuthor().firstname} + ' ' + ${task.getPersonAuthor().surname}"></td>
+                    <td th:text="${task.topic}"></td>
+                    <td th:text="${task.date}"></td>
+                    <td th:text="${task.duedate}"></td>
+                    <td align="center" th:text="${task.urgent} ? '&#128681;' : ''"></td>
+                    <td>
+                        <a th:href="@{/home/showtask/{id}(id=${task.id})}" class="btn btn-primary">Read</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div id="Sent messages" class="tabcontent">
-        <h3>Sent messages</h3>
-        <table class="table table-striped table-responsive-md">
-            <thead>
-            <tr>
-                <th>Receiver</th>
-                <th>Topic</th>
-                <th>Date</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="message : ${listMessages}" th:if="${message.author} == ${#request.remoteUser}">
-                <td th:text="${message.getPersonReceiver().firstname} + ' ' + ${message.getPersonReceiver().surname}"></td>
-                <td th:text="${message.topic}"></td>
-                <td th:text="${message.date}"></td>
-                <td>
-                    <a th:href="@{/home/showmessage/{id}(id=${message.id})}" class="btn btn-primary">Read</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div id="sent_messages_tasks" class="tabcontent">
+        <h3>Sent</h3>
+        <hr>
+        <div style="float:left;">
+            <h4>Messages</h4>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                <tr>
+                    <th>Receiver</th>
+                    <th>Topic</th>
+                    <th>Date</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="message : ${listMessages}" th:if="${message.author} == ${#request.remoteUser}">
+                    <td th:text="${message.getPersonReceiver().firstname} + ' ' + ${message.getPersonReceiver().surname}"></td>
+                    <td th:text="${message.topic}"></td>
+                    <td th:text="${message.date}"></td>
+                    <td>
+                        <a th:href="@{/home/showmessage/{id}(id=${message.id})}" class="btn btn-primary">Read</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div style="float:right;">
+            <h4>Tasks</h4>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                <tr>
+                    <th>Receiver</th>
+                    <th>Topic</th>
+                    <th>Date</th>
+                    <th>Due date</th>
+                    <th>Urgency</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="task : ${listTasks}" th:if="${task.author} == ${#request.remoteUser}">
+                    <td th:text="${task.getPersonReceiver().firstname} + ' ' + ${task.getPersonReceiver().surname}"></td>
+                    <td th:text="${task.topic}"></td>
+                    <td th:text="${task.date}"></td>
+                    <td th:text="${task.duedate}"></td>
+                    <td align="center" th:text="${task.urgent} ? '&#128681;' : ''"></td>
+                    <td>
+                        <a th:href="@{/home/showtask/{id}(id=${task.id})}" class="btn btn-primary">Read</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+
 <script>
-    document.getElementById("inc_messages").click();
+    document.getElementById("inc_messages_tasks").click();
 </script>
 <script>
     function openEnvelope(evt, envName) {
@@ -88,7 +154,7 @@
 
         tablinks = document.getElementsByClassName("tablinks");
         for (i = 0; i < tablinks.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" active", "");
+            tablinks[i].className = tablinks[i].className.replace("active", "");
         }
 
         document.getElementById(envName).style.display = "block";
