--- a/src/main/resources/templates/list-people-page.html
+++ b/src/main/resources/templates/list-people-page.html
@@ -15,7 +15,7 @@
 <div class="container">
     <h1>CRM System</h1>
     <hr>
-    <a th:href="@{/home/createpersonform}" class="btn btn-primary">Add person</a>
+    <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/person/add}" class="btn btn-primary">Add person</a>
     <a th:href="@{/home}" class="btn btn-primary">Back</a>
     <hr>
     <table class="table table-striped table-responsive-md">
@@ -38,10 +38,10 @@
             <td th:text="${person.role}"></td>
             <td th:text="${person.status}"></td>
             <td>
-                <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/home/update/{id}(id=${person.id})}"
+                <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/person/update/{id}(id=${person.id})}"
                    class="btn btn-primary">Update</a>
                 <a th:if="${curperson.role.name()}=='ADMIN'"
-                   th:href="@{/home/{login}/delete/{id}(id=${person.id}, login=${#request.remoteUser})}"
+                   th:href="@{/person/delete/{id}(id=${person.id})}"
                    style="background-color: indianred" class="btn btn-primary">Delete</a>
             </td>
         </tr>
