feature: refactored controllers and views

--- a/src/main/resources/templates/add-person-page.html
+++ b/src/main/resources/templates/add-person-page.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Management System</h1>
+    <h1><b>Person adding</b></h1>
     <hr>
     <h2>Add new person</h2>
     <form action="#" th:action="@{/person/save}" th:object="${person}"
