--- a/src/main/resources/templates/create-task-page.html
+++ b/src/main/resources/templates/create-task-page.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>CRM System</h1>
+    <h1><b>Task creation</b></h1>
     <hr>
     <h2>New task</h2>
     <form id="create" action="#" th:action="@{/task/save}"
