--- a/src/main/resources/templates/create-message-page.html
+++ b/src/main/resources/templates/create-message-page.html
@@ -3,7 +3,8 @@
 <head>
     <title>New Message</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/yeti/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootlint@1.1.0/dist/browser/bootlint.min.js"></script>
@@ -12,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>CRM System</h1>
+    <h1><b>Message creation</b></h1>
     <hr>
     <h2>New message</h2>
     <form id="create" action="#" th:action="@{/message/save}" th:object="${message}" method="POST">
