--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to CRM System, [[${#request.remoteUser}]]</h1>
+    <h1>
+        <strong th:text="'Welcome to Little CRM,' + ' ' + ${curperson.firstname} + ' ' + ${curperson.surname}"></strong>
+    </h1>
     <hr>
     <a th:href="@{/message/create}" class="btn btn-primary">New
         message</a>
@@ -66,6 +68,7 @@
                     <th>Date</th>
                     <th>Due date</th>
                     <th>Urgency</th>
+                    <th>Completion</th>
                     <th></th>
                 </tr>
                 </thead>
@@ -76,6 +79,14 @@
                     <td th:text="${task.date}"></td>
                     <td th:text="${task.duedate}"></td>
                     <td align="center" th:text="${task.urgent} ? '&#128681;' : ''"></td>
+                    <td>
+                        <div
+                                th:switch="${task.completion.name()}">
+                            <p style="color:red;" th:case="'START'">Registered</p>
+                            <p style="color:yellow;" th:case="'DONE'">Completed</p>
+                            <p style="color:lime;" th:case="'APPROVED'">Checked</p>
+                        </div>
+                    </td>
                     <td>
                         <a th:href="@{/task/show/{id}(id=${task.id})}" class="btn btn-primary">Read</a>
                     </td>
@@ -120,6 +131,7 @@
                     <th>Date</th>
                     <th>Due date</th>
                     <th>Urgency</th>
+                    <th>Completion</th>
                     <th></th>
                 </tr>
                 </thead>
@@ -130,6 +142,14 @@
                     <td th:text="${task.date}"></td>
                     <td th:text="${task.duedate}"></td>
                     <td align="center" th:text="${task.urgent} ? '&#128681;' : ''"></td>
+                    <td>
+                        <div
+                                th:switch="${task.completion.name()}">
+                            <p style="color:red;" th:case="'START'">Registered</p>
+                            <p style="color:yellow;" th:case="'DONE'">Completed</p>
+                            <p style="color:lime;" th:case="'APPROVED'">Checked</p>
+                        </div>
+                    </td>
                     <td>
                         <a th:href="@{/task/show/{id}(id=${task.id})}" class="btn btn-primary">Read</a>
                     </td>
