--- a/src/main/resources/templates/list-people-page.html
+++ b/src/main/resources/templates/list-people-page.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>CRM System</h1>
+    <h1><b>Management</b></h1>
     <hr>
     <a th:if="${curperson.role.name()}=='ADMIN'" th:href="@{/person/add}" class="btn btn-primary">Add person</a>
     <a th:href="@{/home}" class="btn btn-primary">Back</a>
@@ -21,19 +21,18 @@
     <table class="table table-striped table-responsive-md">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>Firstname</th>
             <th>Surname</th>
+            <th>Firstname</th>
             <th>Login</th>
             <th>Role</th>
             <th>Status</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="person : ${listPeople}">
-            <td th:text="${person.id}"></td>
-            <td th:text="${person.firstname}"></td>
             <td th:text="${person.surname}"></td>
+            <td th:text="${person.firstname}"></td>
             <td th:text="${person.login}"></td>
             <td th:text="${person.role}"></td>
             <td th:text="${person.status}"></td>
