--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -3,7 +3,8 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/yeti/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootlint@1.1.0/dist/browser/bootlint.min.js"></script>
@@ -11,22 +12,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <h1>CRM System</h1>
+<div class="container" th:align="center">
+    <h1><b>Little CRM</b></h1>
     <hr>
     <form id="login" class="form-signin" method="post" action="/auth/login">
-        <h2 class="form-signin-heading">Login</h2>
         <p>
+        <div>
             <label for="username">Login</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Login" style="width: 25%;" required>
-        </p>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Login"
+                   style="width: 25%;" required>
+        </div>
         <p>
+        <div>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" style="width: 25%;" required>
-        </p>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+                   style="width: 25%;" required>
+        </div>
+        <p>
     </form>
     <div>
-        <button id="login_button" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button id="login_button" style="width:200px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in
+        </button>
     </div>
     <hr>
 </div>
