--- a/src/main/resources/templates/message-page.html
+++ b/src/main/resources/templates/message-page.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>CRM System</h1>
+    <h1><b>Message</b></h1>
     <hr>
     <h2>Message content</h2>
     <p th:text="${message.getContent()}">VALUE</p>
