--- a/src/main/resources/templates/task-page.html
+++ b/src/main/resources/templates/task-page.html
@@ -13,11 +13,54 @@
 </head>
 <body>
 <div class="container">
-    <h1>CRM System</h1>
+    <h1><b>Task</b></h1>
     <hr>
     <h2>Task content</h2>
     <p th:text="${task.getContent()}">VALUE</p>
-    <a th:href="@{/home}" class="btn btn-primary">Back</a>
+
+    <h2>Task status</h2>
+    <p th:text="${task.getCompletion()}">VALUE</p>
+    <p>
+
+    <form id="send_form" action="#" th:action="@{/task/done}" th:object="${task}"
+          th:method="POST">
+        <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{author}"/>
+        <input type="hidden" th:field="*{receiver}"/>
+        <input type="hidden" th:field="*{date}"/>
+        <input type="hidden" th:field="*{duedate}"/>
+        <input type="hidden" th:field="*{content}"/>
+        <input type="hidden" th:field="*{topic}"/>
+        <input type="hidden" th:field="*{urgent}"/>
+        <h2>Task solution</h2>
+        <label>
+            <input th:readonly="${task.receiver} != ${curperson.login} or ${task.completion.name()}=='DONE'" type="text"
+                   style="width:800px;"
+                   th:field="*{solution}"
+                   placeholder="Solution"
+                   class="form-control mb-4 col-4">
+        </label>
+    </form>
+    <button id="send_button" th:if="${task.receiver}==${curperson.login} and ${task.completion.name()}=='START'"
+            type="submit"
+            class="btn btn-info col-2">Send
+    </button>
+
+
+    <p>
+    <form action="#" th:action="@{/task/approved/{id}(id=${task.id})}" th:object="${task}"
+          method="POST">
+        <button th:if="${task.author}==${curperson.login} and ${task.completion.name()}=='DONE'" type="submit"
+                class="btn btn-info col-2">Approve
+        </button>
+    </form>
+
+
+    <p>
+        <a th:href="@{/home}" class="btn btn-primary">Back</a>
 </div>
+<script>
+    document.getElementById('send_button').addEventListener('click', () => document.getElementById('send_form').submit());
+</script>
 </body>
 </html>
