--- a/src/main/resources/templates/update-person-page.html
+++ b/src/main/resources/templates/update-person-page.html
@@ -36,7 +36,7 @@
         <label for="status">Status: </label>
         <select class="form-control" id="status" name="status" style="width:250px;">
             <option th:each="status : ${statusoptions}" th:text="${status}" th:value="${status}"
-                    th:selected="(${status == person.status.name()})">
+                    th:selected="(${status == person.getStatus()})">
             </option>
         </select>
     </form>
