fix: fixed date input

--- a/src/main/resources/templates/create-task-page.html
+++ b/src/main/resources/templates/create-task-page.html
@@ -32,7 +32,7 @@
                        class="form-control mb-4 col-4">
             </label>
             <label>
-                <input type="text" style="width:200px;" th:field="*{duedate}" placeholder="Due date"
+                <input type="date" style="width:2000px;" th:field="*{duedate}" placeholder="Due date"
                        class="form-control mb-4 col-4">
             </label>
             <label th:for="${#ids.next('urgent')}">Urgency
